--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,10 +21,10 @@
             <a class="nav-link" href="{% url 'contact' %}">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'posts' %}">Posts</a>
+            <a class="nav-link" href="{% url 'posts_list' %}">Posts</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'detail' %}">Detail</a>
+            <a class="nav-link" href="{% url 'post_new' %}">New Post</a>
           </li>
         </ul>
       </div>
